--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Site Elegante</title>
-    <link rel="icon" href="Index/favicon-16x16.png" type="image/x-icon">
+    <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
     <style>
         /* Reset e estilos base */
         * {
@@ -118,7 +118,7 @@
 <body>
     <div class="container">
         <!-- Imagem redonda (pode ser trocada) -->
-        <img src="Index/WhatsApp Image 2025-06-06 at 14.26.27.jpeg" alt="Foto de perfil" class="profile-img" id="profileImage">
+        <img src="WhatsApp Image 2025-06-06 at 14.26.27.jpeg" alt="Foto de perfil" class="profile-img" id="profileImage">
         
         <!-- Opção para trocar a imagem -->
         <!--<div class="image-upload">
