--- a/ParaVoceMeuAmor.html
+++ b/ParaVoceMeuAmor.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Para a melhor</title>
-    <link rel="icon" href="Index/favicon-16x16.png" type="image/x-icon">
+    <link rel="icon" href="favicon-16x16.png" type="image/x-icon">
     <style>
         * {
             margin: 0;
@@ -193,7 +193,7 @@
         <div id="phase3-video" class="hidden phase-content">
             <div class="video-container">
                 <video width="560" height="315" controls id="meuVideo">
-                    <source src="Index/videoplayback.mp4" type="video/mp4">
+                    <source src="videoplayback.mp4" type="video/mp4">
                 </video>
                <p>Apenas faça, tu não pode ter talento, mas raça é obrigação, sem perdão 🦾</p>
                <button id="nextAfterVideo" class="btn">Próximo</button>
@@ -216,9 +216,9 @@
         <div id="phase4" class="hidden phase-content">
             <h2>Escolha sua favorita</h2>
             <div class="crowns-container">
-                <img src="Index/Cinder.png" alt="" class="crown" data-crown="1">
-                <img src="Index/prin.png" alt="" class="crown" data-crown="2">
-                <img src="Index/flo.png" alt="" class="crown" data-crown="3">
+                <img src="Cinder.png" alt="" class="crown" data-crown="1">
+                <img src="prin.png" alt="" class="crown" data-crown="2">
+                <img src="flo.png" alt="" class="crown" data-crown="3">
             </div>
         </div>
         
@@ -229,7 +229,7 @@
         </div>
         
         <div id="chocolate" class="hidden phase-content">
-            <img src="Index/caixa.png   " alt="Caixa de chocolate" class="chocolate-box">
+            <img src="caixa.png   " alt="Caixa de chocolate" class="chocolate-box">
             Você pode refazer e apertar no botão de outra cor
         </div>
     </div>
